fixed options menu not showing

--- a/public/styles.css
+++ b/public/styles.css
@@ -168,6 +168,7 @@ body{
     left: 50%;
     transform: translate(-50%,-50%);
     display: none;
+    z-index: 1;
 }
 
 .optionTitle{
